[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
actix-files = "0.6"
actix-web-actors = "4.0"
actix = "0.13"
chrono = "0.4" # For timestamp generation
env_logger = "0.10" # For logging
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
